[SubscriberServiceTest] use getFirst instead of get(0)